--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.8);">
         <div class="container d-flex align-items-center justify-content-center text-center h-100">
           <div class="text-white">
-            <h1 class="mb-3">Learn Bootstrap 5 with MDB</h1>
+            <h1 class="mb-3">Hi, I am Yifan Jiang!</h1>
             <h5 class="mb-4">Best & free guide of responsive web design</h5>
             <a class="btn btn-outline-light btn-lg m-2" href="https://www.youtube.com/watch?v=c9B4TPnak1A" role="button"
               rel="nofollow" target="_blank">Start tutorial</a>
