--- a/index.html
+++ b/index.html
@@ -75,15 +75,6 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a
-                class="nav-link"
-                href="https://blog.yushunchen.com/"
-                target="_blank"
-                >Blog
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="#aboutme">About</a>
             </li>
@@ -99,9 +90,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#interests">Interests</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#new">New</a>
-            </li>
+      
           </ul>
           <!-- Right -->
           <ul class="navbar-nav nav-flex-icons">
@@ -259,22 +248,28 @@
                           Duke University
                         </h4>
                         <p class="badge badge-primary">
-                          Sep 2022 - May 2024 (estimated)
+                          Aug 2022 - May 2024 (estimated)
                         </p>
-                        <p class="badge badge-primary">M.S. ECE</p>
-                        <p class="badge badge-primary">GPA: NA/4.000</p>
+                        <p class="badge badge-primary">M.Eng. ECE</p>
+                        <p class="badge badge-primary">GPA: 3.4/4.0</p>
                         <p>
-                          Life is sometimes running in circles. I fell in love
-                          with Duke since my high school days in Charlotte, NC.
-                          I am so glad that I can come back to a familiar state
-                          and eventually become a student at Duke.
+                          The campus atmosphere, Gothic architecture,
+                          responsible professors, and friends I met at Duke
+                          University will all be treasures in my life.
                         </p>
                         <p>
-                          Duke's rigorous academic standards and beautiful
-                          campus attract me the most. I visited Duke in 2018
-                          when I was in high school and took the picture to the
-                          right. I remember clearly walking on the campus and I
-                          have to say that time flies!
+                          My growth at Duke cannot be measured in time. During
+                          this year, in terms of development, I learned
+                          object-oriented Java from the ground up. In terms of
+                          daily life, I went from not being able to recognize
+                          items in the supermarket when I first arrived in the
+                          United States to now being able to communicate
+                          effortlessly with locals. In terms of personal growth,
+                          I transformed from a young girl who always lived by
+                          her parents' side to a capable and independent adult.
+                        </p>
+                        <p>
+                          I am grateful for the growth that Duke has brought me.
                         </p>
                       </div>
                       <div class="col-lg-4">
@@ -320,21 +315,27 @@
                         <p class="badge badge-info">Sep 2018 - Jul 2022</p>
                         <p class="badge badge-info">M.S ICS</p>
                         <p class="badge badge-info">GPA: 3.81/4.0</p>
-                        <!--                   
+
                         <p>
-                          I am also active outside of classrooms. I worked at
-                          <a
-                            href="https://www.housing.wisc.edu/dining/locations/liz/"
-                            target="_blank"
-                            >Liz's Market</a
-                          >
-                          which is a dining hall on campus. This was my first
-                          job in the United States. My second job is being a
-                          note-taker for the
-                          <a href="https://mcburney.wisc.edu/" target="_blank"
-                            >McBurney Disability Resource Center</a
-                          >.
-                        </p> -->
+                          I am studying in the Software Development
+                          specialization of Information and Computing Science at
+                          XJTLU (Xi'an Jiaotong-Liverpool University), located
+                          in Suzhou, China, a beautiful water town in the
+                          Jiangnan region. XJTLU is a new type of international
+                          university with independent legal status and
+                          distinctive characteristics, established in Suzhou
+                          through the collaboration of Xi'an Jiaotong University
+                          in China and the University of Liverpool in the United
+                          Kingdom, officially approved by the Chinese Ministry
+                          of Education.
+                        </p>
+                        <p>
+                          In terms of education, most courses at XJTLU are
+                          conducted in English. Undergraduate students can
+                          obtain both a bachelor's degree certificate from XJTLU
+                          and the University of Liverpool, as well as an
+                          undergraduate graduation certificate from XJTLU.
+                        </p>
                       </div>
                       <div class="col-lg-4">
                         <div class="view overlay zoom">
