--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#interests">Interests</a>
             </li>
-      
           </ul>
           <!-- Right -->
           <ul class="navbar-nav nav-flex-icons">
@@ -716,7 +715,7 @@
               </div>
               <div class="modal-body">
                 <img
-                  src="images/qrcode.jpg"
+                  src="images/qrcode.jpeg"
                   alt="qrcode"
                   style="width: 400px; height: 540px"
                 />
