Learn more button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link href="css/card.css" rel="stylesheet" />
     <link href="css/dukehref.css" rel="stylesheet" />
     <link href="css/xjtluhref.css" rel="stylesheet" />
+    <link href="css/learnMore.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/devices.min.css" type="text/css" />
     <style type="text/css">
       html,
@@ -96,7 +97,10 @@
           <!-- Right -->
           <ul class="navbar-nav nav-flex-icons">
             <li class="nav-item">
-              <a href="#bottom" class="nav-link">
+              <a class="nav-link"
+              href="files/CV - Yifan Jiang.pdf"
+              rel="nofollow"
+              target="_blank">
                 <i class="fas fa-address-book"></i
               ></a>
             </li>
@@ -225,6 +229,17 @@
                 software engineer with a passion for creating innovative
                 solutions.
               </p>
+            </div>
+            <!-- TODO: Got bug here!! -->
+            <div class="cvButton">
+              <div id="container">
+                <button class="learn-more">
+                  <span class="circle" aria-hidden="true">
+                    <span class="icon arrow"></span>
+                  </span>
+                  <span class="button-text">Learn More</span>
+                </button>
+              </div>
             </div>
           </div>
         </section>
