--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
                 solutions.
               </p>
             </div>
-            <!-- TODO: Got bug here!! -->
-            <div class="cvButton">
+            <div class="col align-self-end"></div>
+            <div class="cvButton row">
               <div id="container">
-                <button class="learn-more">
+                <button class="learn-more"  onclick="window.location.href='/files/CV - Yifan Jiang.pdf'">
                   <span class="circle" aria-hidden="true">
                     <span class="icon arrow"></span>
                   </span>
-                  <span class="button-text">Learn More</span>
+                  <span class="button-text">view resume</span>
                 </button>
               </div>
             </div>
