--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                           <div
                             class="mask flex-center waves-effect waves-light"
                           >
-                            <p class="white-text">Inauguration Ceremony</p>
+                            <p class="white-text">XJTLU campus</p>
                           </div>
                         </div>
                       </div>
