--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <ul class="navbar-nav nav-flex-icons">
             <li class="nav-item">
               <a class="nav-link"
-              href="files/CV - Yifan Jiang.pdf"
+              href="files/Yifan_Jiang_Resume.pdf"
               rel="nofollow"
               target="_blank">
                 <i class="fas fa-address-book"></i
@@ -233,7 +233,7 @@
             <div class="col align-self-end"></div>
             <div class="cvButton row">
               <div id="container">
-                <button class="learn-more"  onclick="window.location.href='/files/CV - Yifan Jiang.pdf'">
+                <button class="learn-more"  onclick="window.location.href='/files/Yifan_Jiang_Resume.pdf'">
                   <span class="circle" aria-hidden="true">
                     <span class="icon arrow"></span>
                   </span>
